trabalho 5/codigos/sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On TIPO_STRING shift to state 1
-- On TIPO_INT shift to state 2
-- On TIPO_FLOAT shift to state 3
-- On TIPO_BOOLEAN shift to state 4
-- On tipo_simples shift to state 5
-- On tipo shift to state 6
-- On programa shift to state 11
-- On list(declaracao_de_variavel) shift to state 12
-- On declaracao_de_variavel shift to state 141
-- On WHILE reduce production list(declaracao_de_variavel) -> 
-- On RETURN reduce production list(declaracao_de_variavel) -> 
-- On PRINT reduce production list(declaracao_de_variavel) -> 
-- On LITSTRING reduce production list(declaracao_de_variavel) -> 
-- On LITINT reduce production list(declaracao_de_variavel) -> 
-- On LITFLOAT reduce production list(declaracao_de_variavel) -> 
-- On LITBOOL reduce production list(declaracao_de_variavel) -> 
-- On IF reduce production list(declaracao_de_variavel) -> 
-- On ID reduce production list(declaracao_de_variavel) -> 
-- On FUNCAO reduce production list(declaracao_de_variavel) -> 
-- On FOR reduce production list(declaracao_de_variavel) -> 
-- On EOF reduce production list(declaracao_de_variavel) -> 
-- On APAR reduce production list(declaracao_de_variavel) -> 

State 1:
tipo_simples -> TIPO_STRING . [ ID ]
-- On ID reduce production tipo_simples -> TIPO_STRING 

State 2:
tipo_simples -> TIPO_INT . [ ID ]
-- On ID reduce production tipo_simples -> TIPO_INT 

State 3:
tipo_simples -> TIPO_FLOAT . [ ID ]
-- On ID reduce production tipo_simples -> TIPO_FLOAT 

State 4:
tipo_simples -> TIPO_BOOLEAN . [ ID ]
-- On ID reduce production tipo_simples -> TIPO_BOOLEAN 

State 5:
tipo -> tipo_simples . [ ID ]
-- On ID reduce production tipo -> tipo_simples 

State 6:
declaracao_de_variavel -> tipo . separated_nonempty_list(VIRGULA,ID) [ WHILE TIPO_STRING TIPO_INT TIPO_FLOAT TIPO_BOOLEAN RETURN PRINT LITSTRING LITINT LITFLOAT LITBOOL IF ID FUNCAO FOR EOF END APAR ]
-- On ID shift to state 7
-- On separated_nonempty_list(VIRGULA,ID) shift to state 10

State 7:
separated_nonempty_list(VIRGULA,ID) -> ID . [ WHILE TIPO_STRING TIPO_INT TIPO_FLOAT TIPO_BOOLEAN RETURN PRINT LITSTRING LITINT LITFLOAT LITBOOL IF ID FUNCAO FOR EOF END APAR ]
separated_nonempty_list(VIRGULA,ID) -> ID . VIRGULA separated_nonempty_list(VIRGULA,ID) [ WHILE TIPO_STRING TIPO_INT TIPO_FLOAT TIPO_BOOLEAN RETURN PRINT LITSTRING LITINT LITFLOAT LITBOOL IF ID FUNCAO FOR EOF END APAR ]
-- On VIRGULA shift to state 8
-- On WHILE reduce production separated_nonempty_list(VIRGULA,ID) -> ID 
-- On TIPO_STRING reduce production separated_nonempty_list(VIRGULA,ID) -> ID 
-- On TIPO_INT reduce production separated_nonempty_list(VIRGULA,ID) -> ID 
-- On TIPO_FLOAT reduce production separated_nonempty_list(VIRGULA,ID) -> ID 
-- On TIPO_BOOLEAN reduce production separated_nonempty_list(VIRGULA,ID) -> ID 
-- On RETURN reduce production separated_nonempty_list(VIRGULA,ID) -> ID 
-- On PRINT reduce production separated_nonempty_list(VIRGULA,ID) -> ID 
-- On LITSTRING reduce production separated_nonempty_list(VIRGULA,ID) -> ID 
-- On LITINT reduce production separated_nonempty_list(VIRGULA,ID) -> ID 
-- On LITFLOAT reduce production separated_nonempty_list(VIRGULA,ID) -> ID 
-- On LITBOOL reduce production separated_nonempty_list(VIRGULA,ID) -> ID 
-- On IF reduce production separated_nonempty_list(VIRGULA,ID) -> ID 
-- On ID reduce production separated_nonempty_list(VIRGULA,ID) -> ID 
-- On FUNCAO reduce production separated_nonempty_list(VIRGULA,ID) -> ID 
-- On FOR reduce production separated_nonempty_list(VIRGULA,ID) -> ID 
-- On EOF reduce production separated_nonempty_list(VIRGULA,ID) -> ID 
-- On END reduce production separated_nonempty_list(VIRGULA,ID) -> ID 
-- On APAR reduce production separated_nonempty_list(VIRGULA,ID) -> ID 

State 8:
separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA . separated_nonempty_list(VIRGULA,ID) [ WHILE TIPO_STRING TIPO_INT TIPO_FLOAT TIPO_BOOLEAN RETURN PRINT LITSTRING LITINT LITFLOAT LITBOOL IF ID FUNCAO FOR EOF END APAR ]
-- On ID shift to state 7
-- On separated_nonempty_list(VIRGULA,ID) shift to state 9

State 9:
separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) . [ WHILE TIPO_STRING TIPO_INT TIPO_FLOAT TIPO_BOOLEAN RETURN PRINT LITSTRING LITINT LITFLOAT LITBOOL IF ID FUNCAO FOR EOF END APAR ]
-- On WHILE reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 
-- On TIPO_STRING reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 
-- On TIPO_INT reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 
-- On TIPO_FLOAT reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 
-- On TIPO_BOOLEAN reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 
-- On RETURN reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 
-- On PRINT reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 
-- On LITSTRING reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 
-- On LITINT reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 
-- On LITFLOAT reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 
-- On LITBOOL reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 
-- On IF reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 
-- On ID reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 
-- On FUNCAO reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 
-- On FOR reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 
-- On EOF reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 
-- On END reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 
-- On APAR reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 

State 10:
declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) . [ WHILE TIPO_STRING TIPO_INT TIPO_FLOAT TIPO_BOOLEAN RETURN PRINT LITSTRING LITINT LITFLOAT LITBOOL IF ID FUNCAO FOR EOF END APAR ]
-- On WHILE reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) 
-- On TIPO_STRING reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) 
-- On TIPO_INT reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) 
-- On TIPO_FLOAT reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) 
-- On TIPO_BOOLEAN reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) 
-- On RETURN reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) 
-- On PRINT reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) 
-- On LITSTRING reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) 
-- On LITINT reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) 
-- On LITFLOAT reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) 
-- On LITBOOL reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) 
-- On IF reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) 
-- On ID reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) 
-- On FUNCAO reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) 
-- On FOR reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) 
-- On EOF reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) 
-- On END reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) 
-- On APAR reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRGULA,ID) 

State 11:
programa' -> programa . [ # ]
-- On # accept programa

State 12:
programa -> list(declaracao_de_variavel) . list(declaracao_de_funcao) list(comando) EOF [ # ]
-- On FUNCAO shift to state 13
-- On list(declaracao_de_funcao) shift to state 143
-- On declaracao_de_funcao shift to state 146
-- On WHILE reduce production list(declaracao_de_funcao) -> 
-- On RETURN reduce production list(declaracao_de_funcao) -> 
-- On PRINT reduce production list(declaracao_de_funcao) -> 
-- On LITSTRING reduce production list(declaracao_de_funcao) -> 
-- On LITINT reduce production list(declaracao_de_funcao) -> 
-- On LITFLOAT reduce production list(declaracao_de_funcao) -> 
-- On LITBOOL reduce production list(declaracao_de_funcao) -> 
-- On IF reduce production list(declaracao_de_funcao) -> 
-- On ID reduce production list(declaracao_de_funcao) -> 
-- On FOR reduce production list(declaracao_de_funcao) -> 
-- On EOF reduce production list(declaracao_de_funcao) -> 
-- On APAR reduce production list(declaracao_de_funcao) -> 

State 13:
declaracao_de_funcao -> FUNCAO . tipo ID APAR loption(separated_nonempty_list(VIRGULA,parametro)) FPAR list(declaracao_de_variavel) list(comando) END [ WHILE RETURN PRINT LITSTRING LITINT LITFLOAT LITBOOL IF ID FUNCAO FOR EOF APAR ]
-- On TIPO_STRING shift to state 1
-- On TIPO_INT shift to state 2
-- On TIPO_FLOAT shift to state 3
-- On TIPO_BOOLEAN shift to state 4
-- On tipo_simples shift to state 5
-- On tipo shift to state 14

State 14:
declaracao_de_funcao -> FUNCAO tipo . ID APAR loption(separated_nonempty_list(VIRGULA,parametro)) FPAR list(declaracao_de_variavel) list(comando) END [ WHILE RETURN PRINT LITSTRING LITINT LITFLOAT LITBOOL IF ID FUNCAO FOR EOF APAR ]
-- On ID shift to state 15

State 15:
declaracao_de_funcao -> FUNCAO tipo ID . APAR loption(separated_nonempty_list(VIRGULA,parametro)) FPAR list(declaracao_de_variavel) list(comando) END [ WHILE RETURN PRINT LITSTRING LITINT LITFLOAT LITBOOL IF ID FUNCAO FOR EOF APAR ]
-- On APAR shift to state 16

State 16:
declaracao_de_funcao -> FUNCAO tipo ID APAR . loption(separated_nonempty_list(VIRGULA,parametro)) FPAR list(declaracao_de_variavel) list(comando) END [ WHILE RETURN PRINT LITSTRING LITINT LITFLOAT LITBOOL IF ID FUNCAO FOR EOF APAR ]
-- On TIPO_STRING shift to state 1
-- On TIPO_INT shift to state 2
-- On TIPO_FLOAT shift to state 3
-- On TIPO_BOOLEAN shift to state 4
-- On tipo_simples shift to state 5
-- On tipo shift to state 17
-- On separated_nonempty_list(VIRGULA,parametro) shift to state 19
-- On parametro shift to state 20
-- On loption(separated_nonempty_list(VIRGULA,parametro)) shift to state 23
-- On FPAR reduce production loption(separated_nonempty_list(VIRGULA,parametro)) -> 

State 17:
parametro -> tipo . ID [ VIRGULA FPAR ]
-- On ID shift to state 18

State 18:
parametro -> tipo ID . [ VIRGULA FPAR ]
-- On VIRGULA reduce production parametro -> tipo ID 
-- On FPAR reduce production parametro -> tipo ID 

State 19:
loption(separated_nonempty_list(VIRGULA,parametro)) -> separated_nonempty_list(VIRGULA,parametro) . [ FPAR ]
-- On FPAR reduce production loption(separated_nonempty_list(VIRGULA,parametro)) -> separated_nonempty_list(VIRGULA,parametro) 

State 20:
separated_nonempty_list(VIRGULA,parametro) -> parametro . [ FPAR ]
separated_nonempty_list(VIRGULA,parametro) -> parametro . VIRGULA separated_nonempty_list(VIRGULA,parametro) [ FPAR ]
-- On VIRGULA shift to state 21
-- On FPAR reduce production separated_nonempty_list(VIRGULA,parametro) -> parametro 

State 21:
separated_nonempty_list(VIRGULA,parametro) -> parametro VIRGULA . separated_nonempty_list(VIRGULA,parametro) [ FPAR ]
-- On TIPO_STRING shift to state 1
-- On TIPO_INT shift to state 2
-- On TIPO_FLOAT shift to state 3
-- On TIPO_BOOLEAN shift to state 4
-- On tipo_simples shift to state 5
-- On tipo shift to state 17
-- On separated_nonempty_list(VIRGULA,parametro) shift to state 22
-- On parametro shift to state 20

State 22:
separated_nonempty_list(VIRGULA,parametro) -> parametro VIRGULA separated_nonempty_list(VIRGULA,parametro) . [ FPAR ]
-- On FPAR reduce production separated_nonempty_list(VIRGULA,parametro) -> parametro VIRGULA separated_nonempty_list(VIRGULA,parametro) 

State 23:
declaracao_de_funcao -> FUNCAO tipo ID APAR loption(separated_nonempty_list(VIRGULA,parametro)) . FPAR list(declaracao_de_variavel) list(comando) END [ WHILE RETURN PRINT LITSTRING LITINT LITFLOAT LITBOOL IF ID FUNCAO FOR EOF APAR ]
-- On FPAR shift to state 24

State 24:
declaracao_de_funcao -> FUNCAO tipo ID APAR loption(separated_nonempty_list(VIRGULA,parametro)) FPAR . list(declaracao_de_variavel) list(comando) END [ WHILE RETURN PRINT LITSTRING LITINT LITFLOAT LITBOOL IF ID FUNCAO FOR EOF APAR ]
-- On TIPO_STRING shift to state 1
-- On TIPO_INT shift to state 2
-- On TIPO_FLOAT shift to state 3
-- On TIPO_BOOLEAN shift to state 4
-- On tipo_simples shift to state 5
-- On tipo shift to state 6
-- On list(declaracao_de_variavel) shift to state 25
-- On declaracao_de_variavel shift to state 141
-- On WHILE reduce production list(declaracao_de_variavel) -> 
-- On RETURN reduce production list(declaracao_de_variavel) -> 
-- On PRINT reduce production list(declaracao_de_variavel) -> 
-- On LITSTRING reduce production list(declaracao_de_variavel) -> 
-- On LITINT reduce production list(declaracao_de_variavel) -> 
-- On LITFLOAT reduce production list(declaracao_de_variavel) -> 
-- On LITBOOL reduce production list(declaracao_de_variavel) -> 
-- On IF reduce production list(declaracao_de_variavel) -> 
-- On ID reduce production list(declaracao_de_variavel) -> 
-- On FOR reduce production list(declaracao_de_variavel) -> 
-- On END reduce production list(declaracao_de_variavel) -> 
-- On APAR reduce production list(declaracao_de_variavel) -> 

State 25:
declaracao_de_funcao -> FUNCAO tipo ID APAR loption(separated_nonempty_list(VIRGULA,parametro)) FPAR list(declaracao_de_variavel) . list(comando) END [ WHILE RETURN PRINT LITSTRING LITINT LITFLOAT LITBOOL IF ID FUNCAO FOR EOF APAR ]
-- On WHILE shift to state 26
-- On RETURN shift to state 90
-- On PRINT shift to state 93
-- On LITSTRING shift to state 27
-- On LITINT shift to state 28
-- On LITFLOAT shift to state 29
-- On LITBOOL shift to state 30
-- On IF shift to state 97
-- On ID shift to state 31
-- On FOR shift to state 100
-- On APAR shift to state 33
-- On variavel shift to state 34
-- On list(comando) shift to state 139
-- On expressao shift to state 111
-- On comando_while shift to state 117
-- On comando_scanString shift to state 118
-- On comando_scanInt shift to state 119
-- On comando_scanFloat shift to state 120
-- On comando_retorno shift to state 121
-- On comando_print shift to state 122
-- On comando_if shift to state 123
-- On comando_for shift to state 124
-- On comando_chamada shift to state 125
-- On comando_atribuicao shift to state 126
-- On comando shift to state 127
-- On chamada shift to state 129
-- On END reduce production list(comando) -> 

State 26:
comando_while -> WHILE . expressao DO list(comando) END [ WHILE RETURN PRINT LITSTRING LITINT LITFLOAT LITBOOL IF ID FOR EOF END ELSE APAR ]
-- On LITSTRING shift to state 27
-- On LITINT shift to state 28
-- On LITFLOAT shift to state 29
-- On LITBOOL shift to state 30
-- On ID shift to state 31
-- On APAR shift to state 33
-- On variavel shift to state 34
-- On expressao shift to state 88
-- On chamada shift to state 42

State 27:
expressao -> LITSTRING . [ WHILE VIRGULA THEN SUBTRACAO RETURN PRINT OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR LITSTRING LITINT LITFLOAT LITBOOL IF ID FPAR FOR EXPONENCIACAO EQUIVALENTE EOF END ELSE DO DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA ATRIB APAR AND_BINARIO AND ADICAO ]
-- On WHILE reduce production expressao -> LITSTRING 
-- On VIRGULA reduce production expressao -> LITSTRING 
-- On THEN reduce production expressao -> LITSTRING 
-- On SUBTRACAO reduce production expressao -> LITSTRING 
-- On RETURN reduce production expressao -> LITSTRING 
-- On PRINT reduce production expressao -> LITSTRING 
-- On OR_BINARIO_EXCLUSIVO reduce production expressao -> LITSTRING 
-- On OR_BINARIO reduce production expressao -> LITSTRING 
-- On OR reduce production expressao -> LITSTRING 
-- On NOT reduce production expressao -> LITSTRING 
-- On NAO_EQUIVALENTE reduce production expressao -> LITSTRING 
-- On MULT_POR_2 reduce production expressao -> LITSTRING 
-- On MULTIPLICACAO reduce production expressao -> LITSTRING 
-- On MODULO reduce production expressao -> LITSTRING 
-- On MENOR_OU_IGUAL reduce production expressao -> LITSTRING 
-- On MENOR reduce production expressao -> LITSTRING 
-- On MAIOR_OU_IGUAL reduce production expressao -> LITSTRING 
-- On MAIOR reduce production expressao -> LITSTRING 
-- On LITSTRING reduce production expressao -> LITSTRING 
-- On LITINT reduce production expressao -> LITSTRING 
-- On LITFLOAT reduce production expressao -> LITSTRING 
-- On LITBOOL reduce production expressao -> LITSTRING 
-- On IF reduce production expressao -> LITSTRING 
-- On ID reduce production expressao -> LITSTRING 
-- On FPAR reduce production expressao -> LITSTRING 
-- On FOR reduce production expressao -> LITSTRING 
-- On EXPONENCIACAO reduce production expressao -> LITSTRING 
-- On EQUIVALENTE reduce production expressao -> LITSTRING 
-- On EOF reduce production expressao -> LITSTRING 
-- On END reduce production expressao -> LITSTRING 
-- On ELSE reduce production expressao -> LITSTRING 
-- On DO reduce production expressao -> LITSTRING 
-- On DIV_POR_2 reduce production expressao -> LITSTRING 
-- On DIVISAO_INTEIRO reduce production expressao -> LITSTRING 
-- On DIVISAO reduce production expressao -> LITSTRING 
-- On CONCATENA reduce production expressao -> LITSTRING 
-- On ATRIB reduce production expressao -> LITSTRING 
-- On APAR reduce production expressao -> LITSTRING 
-- On AND_BINARIO reduce production expressao -> LITSTRING 
-- On AND reduce production expressao -> LITSTRING 
-- On ADICAO reduce production expressao -> LITSTRING 

State 28:
expressao -> LITINT . [ WHILE VIRGULA THEN SUBTRACAO RETURN PRINT OR_BINARIO_EXCLUSIVO OR_BINARIO OR NOT NAO_EQUIVALENTE MULT_POR_2 MULTIPLICACAO MODULO MENOR_OU_IGUAL MENOR MAIOR_OU_IGUAL MAIOR LITSTRING LITINT LITFLOAT LITBOOL IF ID FPAR FOR EXPONENCIACAO EQUIVALENTE EOF END ELSE DO DIV_POR_2 DIVISAO_INTEIRO DIVISAO CONCATENA ATRIB APAR AND_BINARIO AND ADICAO ]
-- On WHILE reduce production expressao -> LITINT 
-- On VIRGULA reduce production expressao -> LITINT 
-- On THEN reduce production expressao -> LITINT 
-- On SUBTRACAO reduce production expressao -> LITINT 
-- On RETURN reduce production expressao -> LITINT 
-- On PRINT reduce production expressao -> LITINT 
-- On OR_BINARIO_EXCLUSIVO reduce production expressao -> LITINT 
-- On OR_BINARIO reduce production expressao -> LITINT 
-- On OR reduce production expressao -> LITINT 
-- On NOT reduce production expressao -> LITINT 
-- On NAO_EQUIVALENTE reduce production expressao -> LITINT 
-- On MULT_POR_2 reduce production expressao -> LITINT 
-- On MULTIPLICACAO reduce production expressao -> LITINT 
-- On MODULO reduce production expressao -> LITINT 
-- On MENOR_OU_IGUAL reduce production expressao -> LITINT 
-- On MENOR reduce production expressao -> LITINT 
-- On MAIOR_OU_IGUAL reduce production expressao -> LITINT 
-- On MAIOR reduce production expressao -> LITINT 
-- On LITSTRING reduce production expressao -> LITINT 
-- On LITINT reduce production expressao -> LITINT 
-- On LITFLOAT reduce production expressao -> LITINT 
-- On LITBOOL reduce production expressao -> LITINT 
-- On IF reduce production expressao -> LITINT 
-- On ID reduce production expressao -> LITINT 
-- On FPAR reduce production expressao -> LITINT 
-- On FOR reduce production expressao -> LITINT 
-- On EXPONENCIACAO reduce production expressao -> LITINT 
-- On EQUIVALENTE reduce production expressao -> LITINT 
-- On EOF reduce production expressao -> LITINT 
-- On END reduce production expressao -> LITINT 
-- On ELSE reduce production expressao -> LITINT 
-- On DO reduce production expressao -> LITINT 
-- On DIV_POR_2 reduce production expressao -> LITINT 
-- On DIVISAO_INTEIRO reduce production expressao -> LITINT 
-- On DIVISAO reduce production expressao -> LITINT 
-- On CONCATENA reduce production expressao -> LITINT 
-- On ATRIB reduce production expressao -> LITINT 
-- On APAR reduce production expressao -> LITINT 
-- On AND_BINARIO reduce production expressao -> LITINT 
-- On AND reduce production expressao -> LITINT 
-- On ADICAO reduce production expressao -> LITINT 
